--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,12 @@
     <string name="profile">Profile</string>
     <string name="circle">Circle</string>
     <string name="log_out">Log Out</string>
-    <string name="help">Help</string>
+    <string name="help">Help!</string>
     <string name="registration">Registration</string>
     <string name="register">Register</string>
     <string name="phone_number">Phone Number</string>
     <string name="full_name">Full Name</string>
     <string name="email">Email</string>
     <string name="empty_field">Please fill this field</string>
+    <string name="circle_list">Circle List</string>
 </resources>
