add settings and custom infowindow in google map

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,5 +26,8 @@
     <string name="title_activity_maps">Map</string>
     <string name="permission_rationale">Location permission is needed to run the feature</string>
     <string name="permission_denied_explanation">Permission is required to use this feature</string>
-    <string name="settings">settings</string>
+    <string name="settings">Settings</string>
+    <string name="profile_picture">Profile Picture</string>
+    <string name="alarm_sound">Alarm Sound</string>
+    <string name="switch_button">Switch</string>
 </resources>
