--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="email">Email</string>
     <string name="empty_field">Please fill this field</string>
     <string name="circle_list">Circle List</string>
-    <string name="circle_list_friend">Your Circle List\'s Friends:</string>
+    <string name="circle_list_friend">Your Circle</string>
     <string name="member_circle_list">You are a member of these circle list:</string>
     <string name="my_profile">My Profile</string>
     <string name="dummy_phone">+6281172841</string>
@@ -36,4 +36,9 @@
     <string name="email_address">Email address</string>
     <string name="register_here">Don\'t have an account yet? Register here</string>
     <string name="retype_password">Retype Password</string>
+    <string name="your_circle">Your Circle</string>
+    <string name="part_of">Part of</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
